# PerfMonitor

./: CMakeLists.txt  FenixFpm.sln  README.md
FenixFpm.Desktop/: App.xaml  App.xaml.cs  FenixFpm.Desktop.csproj  MainWindow.xaml  MainWindow.xaml.cs
FenixFpm.Desktop/Converters/: Converters.cs
FenixFpm.Desktop/Themes/: DarkTheme.xaml
FenixFpm.Desktop/ViewModels/: ActiveFlightViewModel.cs  ApproachViewModel.cs  ClimbCruiseViewModel.cs  DebriefViewModel.cs  LandingViewModel.cs  MainViewModel.cs  PreflightViewModel.cs  TakeoffViewModel.cs
FenixFpm.Desktop/Views/: ApproachView.xaml  ApproachView.xaml.cs  ClimbCruiseView.xaml  ClimbCruiseView.xaml.cs  DebriefView.xaml  DebriefView.xaml.cs  LandingView.xaml  LandingView.xaml.cs  PreflightView.xaml  PreflightView.xaml.cs  TakeoffView.xaml  TakeoffView.xaml.cs
data/performance/: fenix-a320-landing.json
docs/: architecture.md
src/FenixFpm.Console/: FenixFpm.Console.csproj  Program.cs
src/FenixFpm.Console/Configuration/: AppOptions.cs
src/FenixFpm.Contracts/Interop/: FenixSharedMemoryBuffer.cs  FenixSharedMemoryEnums.cs
src/FenixFpm.Core/: FenixFpm.Core.csproj
src/FenixFpm.Core/Abstractions/: IAirbusModule.cs  IDebriefService.cs  IPerformanceDataService.cs  ISimConnectService.cs
src/FenixFpm.Core/Models/: A320PerformanceData.cs  AirbusModuleModels.cs  DomainEnums.cs  FlightSnapshot.cs  SopConfiguration.cs
src/FenixFpm.Core/Modules/: AutobrakeMonitorModule.cs  (+9 more)
src/FenixFpm.Infrastructure/: FenixFpm.Infrastructure.csproj
src/FenixFpm.Wasm/: FenixFpm.Wasm.vcxproj  FenixFpmSharedMemory.h  FenixWasmModule.cpp
(+15 files in other folders)
